Fixed upgrade button styling. Added cancel button. Aligned layout of constructions.

--- a/resources/sass/utils.scss
+++ b/resources/sass/utils.scss
@@ -1,3 +1,8 @@
 .is-growing {
     flex-grow: 1 !important;
 }
+
+.card-growing {
+    display: flex;
+    flex-direction: column;
+}
